# mobile_robot_amr

./: README.md  frames_2025-11-20_17.10.37.gv  frames_2025-11-20_17.16.11.gv  frames_2025-11-20_17.40.42.gv  frames_2025-11-21_14.40.13.gv  frames_2025-11-21_14.58.31.gv  frames_2025-11-21_15.06.38.gv  frames_2025-11-21_15.14.19.gv  frames_2025-11-23_10.56.01.gv  frames_2025-12-02_17.12.20.gv  frames_2025-12-06_11.00.40.gv  frames_2025-12-13_14.45.56.gv  pose_log.csv  simple.world
imu_static/: imu_static_0.db3  metadata.yaml
maps/: frames_2025-09-15_11.58.18.gv  maze_05  maze_05_fortress.world  maze_05_fortress_v2.world  maze_31.pgm  maze_31.yaml  maze_31_fix.pgm  my_map.pgm  my_map.yaml  my_map1401.pgm  my_map16.yaml  my_map16122.yaml  my_map161221.pgm  my_map1612_jetson.pgm  my_map1612_jetson.yaml  my_map16_cl.pgm  new_map.pgm  new_map.yaml  simple_corridor.world  simple_corridor1.world  simple_corridor2.world  simple_corridor3.world  world1.sdf
rosbag2_2025_12_14-16_05_46/: metadata.yaml  rosbag2_2025_12_14-16_05_46_0.db3
rosbag2_2025_12_14-16_06_07/: metadata.yaml  rosbag2_2025_12_14-16_06_07_0.db3
src/agv0509test6/: CMakeLists.txt  package.xml
src/agv0509test6/config/: amcl.yaml  bridge_parameters.yaml  ekf.yaml  joint_names_agv0509test6.yaml  nav2_params.yaml  nav2_params_clean.yaml  preset_goals.yaml  scan_filter.yaml  slam_toolbox_params.yaml
src/agv0509test6/launch/: agv_display.py  agv_run.py  bringup_localization.launch.py  gazebo_world_rviz2.launch.py  localization_viz.launch.py  navigation_launch.py  navigation_real_launch.py  real_robot_slam.launch.py  sim.launch.py  slam_toolbox.launch.py  view_rplidar_a2m12_launch.py
src/agv0509test6/meshes/: Base_Link.stl  Base_footprint.stl  Left_Wheel.stl  Lidar.stl  Right_Wheel.stl
src/agv0509test6/urdf/: agv0509test6.urdf
src/agv0509test6/worlds/: maze_05.world  world1.sdf
(+66 files in other folders)
