<?xml version="1.0"?>
<package format="3">
  <name>agv0509test6</name>
  <version>1.0.0</version>
  <description>
    URDF Description package for agv0509test6.
    This package contains configuration data, 3D models and launch files
    for agv0509test6 robot.
  </description>

  <maintainer email="TODO@email.com">TODO</maintainer>
  <author email="TODO@email.com">TODO</author>
  <license>BSD</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>rplidar_ros</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>rclcpp</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
